# msr_papers_sampling_workflows

./: log.txt  pyproject.toml  requirements.txt
data/DBLP/: dblp_query.txt  msr.csv  study.csv
data/IEEE_DATA/: MSR_21.csv  MSR_22.csv  MSR_23.csv  MSR_24.csv  MSR_25.csv
result/: ks_analysis.txt  sampled_repos.json
result1M/: ks_analysis.txt  sampled_repos.json
result1M/workflow_visualization/: workflow.html
src/: paper_methodo_dblp.py  running_exemple.py
src/msr_papers_sampling_workflows/: paper_methodo_dblp.py  running_exemple.ipynb  running_exemple.py  running_exemple_swh.py
src/msr_papers_sampling_workflows/workflow_msr/MSR2024/: Wokflow_13.py  Workflow_1.py  Workflow_10.py  Workflow_11.py  Workflow_12.py  Workflow_14.py  Workflow_15.py  Workflow_16.py  Workflow_17.py  Workflow_18.py  Workflow_19.py  Workflow_2.py  Workflow_3.py  Workflow_4.py  Workflow_5.py  Workflow_6.py  Workflow_7.py  Workflow_8.py  Workflow_9.py
src/msr_papers_sampling_workflows/workflow_msr/SAMPLE/: 10.1109_MSR52588.2021.00024.py  10.1109_MSR52588.2021.00027.py  10.1109_MSR52588.2021.00029.py  10.1109_MSR52588.2021.00034.py  10.1109_MSR52588.2021.00037.py  10.1109_MSR52588.2021.00057.py  (+28 more)
src/workflow_msr/MSR2024/: Wokflow_13.py  Workflow_10.py  Workflow_11.py  Workflow_14.py  Workflow_16.py  Workflow_18.py  Workflow_19.py  Workflow_2.py  Workflow_5.py  Workflow_6.py  Workflow_7.py  Workflow_8.py
src/workflow_msr/SAMPLE/: 10.1109_MSR52588.2021.00024.py  10.1109_MSR52588.2021.00027.py  10.1109_MSR52588.2021.00029.py  10.1109_MSR52588.2021.00034.py  10.1109_MSR52588.2021.00057.py  10.1109_MSR52588.2021.00058.py  10.1109_MSR59073.2023.00019.py  10.1109_MSR59073.2023.00031.py  10.1109_MSR66628.2025.00019.py  10.1109_MSR66628.2025.00020.py  10.1109_MSR66628.2025.00085.py  10.1109_MSR66628.2025.00106.py  10.1145_3524842.3527934.py  10.1145_3524842.3527951.py  10.1145_3524842.3527963.py  10.1145_3524842.3528432.py  10.1145_3524842.3528448.py  10.1145_3524842.3528467.py  10.1145_3643991.3644906.py  10.1145_3643991.3644915.py
