[build-system]
requires = ["hatchling", "setuptools>=65.0", "wheel"]
build-backend = "hatchling.build"

[project]
name = "MSR_PAPER_sampling_mining_workflows_dsl"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "sampling-mining-workflows-dsl",
    "requests>=2.32.5",
]

[tool.hatch.metadata]
allow-direct-references = true

dependencies = [
    "python-dateutil>=2.9.0"]


[tool.hatch.build.targets.wheel]
packages = ["src/msr_papers_sampling_mining_workflows_dsls"]


[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "TD",       # Be diligent with TODO comments
]
ignore = [
    "COM812",  # missing-trailing-comma
    "CPY001",  # Missing copyright notice at top of file
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # blank line required before class docstring
    "D211",    # no-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "EM101",   # raw-string-in-exception
    "FIX002",  # line-contains-todo
    "E501",    # Line too long
    "TD003",   # Missing issue link on todo
]

[tool.uv.sources]
sampling-mining-workflows-dsl = { git = "https://github.com/RomainLefeuvre/SamplingMiningWorflowDSL.git" }





